gfp
===
Snapshot ????-??-?? ToDo
 * Add first world.
 * Add scripting for individual testing and comparsion.
 * Add multithread support.
 * Move functions info into library instead text file.
 * Add LISP quotation.
 * Use own tokenizer.

Now
 * Move map loader into static member of World.
 * Add moving in world.
 * Add updating world.

Version 0.0.0.3 2010-10-16
 * Add map loader.
 * Make EVAL as built-in function.
 * Speed up VM::Environment::Eval
 * Remove circle counter from VM::Environment
 * Use IF and QUOTE as in LISP.

Version 0.0.0.2 2010-09-11
 * Make ruby's conditional support.
 * Implement WeakObject for some speed up.
 * Add MS VC compilation.
 * Add removing unused functions.

Version 0.0.0.1 2010-08-24
 * Fix bugs in allocation.
 * Fix bugs in reading streams into objects.
 * Fix memory leak.
 * Add object's generation and mutation support.
 * Add inital generation.
 * Add crossover.
 * Add mutation.
 * Grow some program.

Snapshot 2010-08-12
 * Make own binary for test interpreter.
 * Prepare for inital generation.
 * Add config singleton.

Snapshot 2010-03-27
 * Add Ruby support.
 * Finish functions.

Snapshot 2010-03-26
 * Add support for execution of program.

Snapshot 2010-02-21
 * Add all needed files for GNU GPL.
 * Start adding of calculation.
 * Add LaTeX documentation.

Snapshot 2010-02-20
 * Add support for function names and loading functions from shared library.

Snapshot 2010-01-05
 * Inital snapshot of new branch and closing dead branch
 * Some copying and refactoring old code.
